# openweatherwrap

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
openweatherwrap/: __init__.py  api.py  core.py  errors.py
